# api/api/v1/money-diary/$api.ts
@@ -2,14 +2,16 @@ import type { AspidaClient, BasicHeaders } from 'aspida'
 import { dataToURLString } from 'aspida'
 import type { Methods as Methods0 } from '.'
 import type { Methods as Methods1 } from './_id@string'
-import type { Methods as Methods2 } from './month'
-import type { Methods as Methods3 } from './search'
+import type { Methods as Methods2 } from './aggregate'
+import type { Methods as Methods3 } from './month'
+import type { Methods as Methods4 } from './search'
 
 const api = <T>({ baseURL, fetch }: AspidaClient<T>) => {
   const prefix = (baseURL === undefined ? '' : baseURL).replace(/\/$/, '')
   const PATH0 = '/api/v1/money-diary'
-  const PATH1 = '/api/v1/money-diary/month'
-  const PATH2 = '/api/v1/money-diary/search'
+  const PATH1 = '/api/v1/money-diary/aggregate'
+  const PATH2 = '/api/v1/money-diary/month'
+  const PATH3 = '/api/v1/money-diary/search'
   const GET = 'GET'
   const POST = 'POST'
   const PUT = 'PUT'
@@ -21,9 +23,9 @@ const api = <T>({ baseURL, fetch }: AspidaClient<T>) => {
 
       return {
         put: (option: { body: Methods1['put']['reqBody'], config?: T | undefined }) =>
-          fetch<void, BasicHeaders, Methods1['put']['status']>(prefix, prefix0, PUT, option).send(),
+          fetch<Methods1['put']['resBody'], BasicHeaders, Methods1['put']['status']>(prefix, prefix0, PUT, option).json(),
         $put: (option: { body: Methods1['put']['reqBody'], config?: T | undefined }) =>
-          fetch<void, BasicHeaders, Methods1['put']['status']>(prefix, prefix0, PUT, option).send().then(r => r.body),
+          fetch<Methods1['put']['resBody'], BasicHeaders, Methods1['put']['status']>(prefix, prefix0, PUT, option).json().then(r => r.body),
         delete: (option?: { config?: T | undefined } | undefined) =>
           fetch<void, BasicHeaders, Methods1['delete']['status']>(prefix, prefix0, DELETE, option).send(),
         $delete: (option?: { config?: T | undefined } | undefined) =>
@@ -31,30 +33,37 @@ const api = <T>({ baseURL, fetch }: AspidaClient<T>) => {
         $path: () => `${prefix}${prefix0}`
       }
     },
-    month: {
-      get: (option: { query: Methods2['get']['query'], headers?: Methods2['get']['reqHeaders'] | undefined, config?: T | undefined }) =>
+    aggregate: {
+      get: (option?: { config?: T | undefined } | undefined) =>
         fetch<Methods2['get']['resBody'], BasicHeaders, Methods2['get']['status']>(prefix, PATH1, GET, option).json(),
-      $get: (option: { query: Methods2['get']['query'], headers?: Methods2['get']['reqHeaders'] | undefined, config?: T | undefined }) =>
+      $get: (option?: { config?: T | undefined } | undefined) =>
         fetch<Methods2['get']['resBody'], BasicHeaders, Methods2['get']['status']>(prefix, PATH1, GET, option).json().then(r => r.body),
-      $path: (option?: { method?: 'get' | undefined; query: Methods2['get']['query'] } | undefined) =>
-        `${prefix}${PATH1}${option && option.query ? `?${dataToURLString(option.query)}` : ''}`
+      $path: () => `${prefix}${PATH1}`
     },
-    search: {
-      get: (option: { query: Methods3['get']['query'], config?: T | undefined }) =>
+    month: {
+      get: (option: { query: Methods3['get']['query'], headers?: Methods3['get']['reqHeaders'] | undefined, config?: T | undefined }) =>
         fetch<Methods3['get']['resBody'], BasicHeaders, Methods3['get']['status']>(prefix, PATH2, GET, option).json(),
-      $get: (option: { query: Methods3['get']['query'], config?: T | undefined }) =>
+      $get: (option: { query: Methods3['get']['query'], headers?: Methods3['get']['reqHeaders'] | undefined, config?: T | undefined }) =>
         fetch<Methods3['get']['resBody'], BasicHeaders, Methods3['get']['status']>(prefix, PATH2, GET, option).json().then(r => r.body),
       $path: (option?: { method?: 'get' | undefined; query: Methods3['get']['query'] } | undefined) =>
         `${prefix}${PATH2}${option && option.query ? `?${dataToURLString(option.query)}` : ''}`
+    },
+    search: {
+      get: (option: { query: Methods4['get']['query'], config?: T | undefined }) =>
+        fetch<Methods4['get']['resBody'], BasicHeaders, Methods4['get']['status']>(prefix, PATH3, GET, option).json(),
+      $get: (option: { query: Methods4['get']['query'], config?: T | undefined }) =>
+        fetch<Methods4['get']['resBody'], BasicHeaders, Methods4['get']['status']>(prefix, PATH3, GET, option).json().then(r => r.body),
+      $path: (option?: { method?: 'get' | undefined; query: Methods4['get']['query'] } | undefined) =>
+        `${prefix}${PATH3}${option && option.query ? `?${dataToURLString(option.query)}` : ''}`
     },
     get: (option?: { headers?: Methods0['get']['reqHeaders'] | undefined, config?: T | undefined } | undefined) =>
       fetch<Methods0['get']['resBody'], BasicHeaders, Methods0['get']['status']>(prefix, PATH0, GET, option).json(),
     $get: (option?: { headers?: Methods0['get']['reqHeaders'] | undefined, config?: T | undefined } | undefined) =>
       fetch<Methods0['get']['resBody'], BasicHeaders, Methods0['get']['status']>(prefix, PATH0, GET, option).json().then(r => r.body),
     post: (option: { body: Methods0['post']['reqBody'], config?: T | undefined }) =>
-      fetch<void, BasicHeaders, Methods0['post']['status']>(prefix, PATH0, POST, option).send(),
+      fetch<Methods0['post']['resBody'], BasicHeaders, Methods0['post']['status']>(prefix, PATH0, POST, option).json(),
     $post: (option: { body: Methods0['post']['reqBody'], config?: T | undefined }) =>
-      fetch<void, BasicHeaders, Methods0['post']['status']>(prefix, PATH0, POST, option).send().then(r => r.body),
+      fetch<Methods0['post']['resBody'], BasicHeaders, Methods0['post']['status']>(prefix, PATH0, POST, option).json().then(r => r.body),
     $path: () => `${prefix}${PATH0}`
   }
 }
